--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -7,8 +7,15 @@
     android:layout_height="150dp"
     android:background="@color/foi_red"
     android:padding="16dp"
-    android:theme="@style/ThemeOverlay.AppCompat.Light">
+    android:theme="@style/ThemeOverlay.AppCompat.Light"
+    >
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="80dp"
@@ -20,5 +27,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.506"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@tools:sample/avatars"
+        android:layout_gravity="center_vertical"
+        />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"
+            >
+
+            <TextView
+                android:id="@+id/navUser"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:text="Jon Doe"
+                android:textColor="@color/white_acc"
+                />
+
+            <TextView
+                android:id="@+id/navStudy"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Graduation unknown"
+                android:textColor="@color/white_acc"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/navYear"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="year unknown"
+                android:textColor="@color/white_acc"
+                android:textSize="16sp"
+                />
+
+
+        </LinearLayout>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
