- Popravljen prikaz boja ako korisnik ima Dark Mode ukljucen - Popravljeno spremanje postavki korisnika ako nema slike - Popravljeno zadrzavanje vrijednosti polja username na Login formi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="start"
+                android:background="@color/white_acc"
                 app:headerLayout="@layout/nav_header"
                 app:menu="@menu/navdrawer_menu"
                 app:itemBackground="@drawable/nav_background_selector" >
