--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -11,6 +11,7 @@
         android:id="@+id/txtDTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/grey_60"
         android:text="-"
         android:textSize="18dp"
         android:gravity="center"
@@ -21,6 +22,7 @@
         android:id="@+id/txtDPresence"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/grey_60"
         android:layout_marginTop="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
@@ -32,6 +34,7 @@
         android:id="@+id/txtDInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/grey_60"
         android:layout_marginTop="25dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
