- Dodani tabovi My Location i Other Rooms u Ambience - Dodani funkcionalni prikazi grafova (za sad hardkodirani podaci) - Dodani funkcionalni izbornici za zgrade i sobe u Other Rooms - Prepravljen model za Room i dodan model za Sensor (network) - Dodani handleri za funkcije koje su izbacivale exception ako nema internetske veze (My Classes, Ambience, Login) - Promijenjena boja loading ikone u foi crvenu - Promijenjena boja spinner ikone u sivu (prije nije bila vidljiva kao bijela) - Rubovi image bordera za prikaz slike korisnika su sada okrugli

--- a/app/src/main/res/layout/spinner_programs.xml
+++ b/app/src/main/res/layout/spinner_programs.xml
@@ -9,5 +9,5 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/dropdownListPreferredItemHeight"
     android:background="@drawable/abc_spinner_mtrl_am_alpha"
-    android:backgroundTint="@color/white_acc"
+    android:backgroundTint="@color/grey_60"
     android:ellipsize="marquee" />
