--- a/app/src/main/res/drawable/image_border.xml
+++ b/app/src/main/res/drawable/image_border.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <corners android:radius="10dp" />
     <solid android:color="#000000" />
     <stroke android:width="5dp" android:color="#FFFFFF" />
     <padding android:left="5dp" android:top="5dp" android:right="5dp"
