--- a/app/src/main/res/layout/include_progress_overlay.xml
+++ b/app/src/main/res/layout/include_progress_overlay.xml
@@ -13,6 +13,7 @@
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
+        android:indeterminateTint="@color/foi_red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
