--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -186,6 +186,36 @@
             >
 
             <TextView
+                android:id="@+id/txtSettingsSemester"
+                android:layout_width="120dp"
+                android:layout_height="match_parent"
+                android:text="Semester"
+                android:textColor="@color/grey_60"
+                android:textSize="22sp" />
+
+            <EditText
+                android:id="@+id/editTextSemester"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:textColor="@color/grey_60"
+                android:textSize="20sp"
+                android:theme="@style/MyEditTextStyle2"
+                />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            >
+
+            <TextView
                 android:id="@+id/txtSettingsYearOfStudy"
                 android:layout_width="120dp"
                 android:layout_height="match_parent"
