--- a/app/src/main/res/layout/dialog.xml
+++ b/app/src/main/res/layout/dialog.xml
@@ -25,10 +25,26 @@
         android:textColor="@color/grey_60"
         android:layout_marginTop="10dp"
         android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="Presence recorded at: -"
+        android:paddingRight="2dp"
+        android:text="Presence recorded at: "
         android:textSize="16dp"
         android:layout_below="@+id/txtDTitle"/>
+
+    <TextView
+        android:id="@+id/txtDPresenceVar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txtDTitle"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="93dp"
+        android:layout_toEndOf="@+id/txtDPresence"
+        android:paddingLeft="10dp"
+        android:paddingRight="20dp"
+        android:text="-"
+        android:textColor="@color/grey_60"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/txtDInfo"
