--- a/app/src/main/res/layout/fragment_mybehaviours.xml
+++ b/app/src/main/res/layout/fragment_mybehaviours.xml
@@ -97,7 +97,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="STUDY IMPROVMENETS"
+                android:text="STUDY IMPROVEMENTS"
                 android:textColor="@color/red_primary"
                 android:textSize="20sp"
                 android:layout_marginStart="15dp"/>
