--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -223,17 +223,94 @@
                     app:layout_constraintTop_toTopOf="@+id/txtAvgTardiness"
                     app:layout_constraintVertical_bias="1.0" />
 
-                <com.github.mikephil.charting.charts.PieChart
-                    android:id="@+id/pieChart"
-                    android:layout_width="0dp"
-                    android:layout_height="175dp"
-                    android:layout_marginTop="15dp"
+                <LinearLayout
+                    android:id="@+id/linearLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtAvgTardiness"
-                    app:layout_constraintWidth_max="380dp" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtAvgTardiness">
 
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/pieChart"
+                        android:layout_width="190dp"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="15dp" />
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/pieChart2"
+                        android:layout_width="190dp"
+                        android:layout_height="200dp"
+                        android:layout_marginTop="15dp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/linearLayout2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+
+                    android:foregroundGravity="center|center_horizontal"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/rounded_circle_yellow"/>
+
+                    <TextView
+                        android:id="@+id/late"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="LATE"
+                        android:textSize="15sp"
+                        android:textColor="@color/grey_80"
+                        />
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/rounded_circle_teal"
+                        android:layout_marginLeft="5dp"
+
+                        />
+
+                    <TextView
+                        android:id="@+id/early"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="EARLY"
+                        android:textSize="15sp"
+                        android:textColor="@color/grey_80"
+                        />
+
+                    <ImageView
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/rounded_circle_red"
+                        android:layout_marginLeft="5dp"
+                        />
+
+                    <TextView
+                        android:id="@+id/inTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="IN TIME"
+                        android:textSize="15sp"
+                        android:textColor="@color/grey_80"
+                        />
+
+                </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         </LinearLayout>
     </ScrollView>
