--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -223,11 +223,10 @@
                     app:layout_constraintTop_toTopOf="@+id/txtAvgTardiness"
                     app:layout_constraintVertical_bias="1.0" />
 
-                <LinearLayout
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/linearLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -235,16 +234,24 @@
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/pieChart"
-                        android:layout_width="190dp"
+                        android:layout_width="0dp"
                         android:layout_height="200dp"
-                        android:layout_marginTop="15dp" />
+                        android:layout_marginRight="10dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/pieChart2"/>
 
                     <com.github.mikephil.charting.charts.PieChart
                         android:id="@+id/pieChart2"
-                        android:layout_width="190dp"
+                        android:layout_width="0dp"
                         android:layout_height="200dp"
-                        android:layout_marginTop="15dp" />
-                </LinearLayout>
+                        android:layout_marginLeft="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/pieChart"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"/>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <LinearLayout
                     android:id="@+id/linearLayout2"
