--- a/app/src/main/res/layout/fragment_ambience_mylocation.xml
+++ b/app/src/main/res/layout/fragment_ambience_mylocation.xml
@@ -282,7 +282,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="It appears your window is lightly open and there is plenty of air circulation."
+                    android:text="-"
                     android:textColor="@color/grey_80"
                     android:textSize="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
