--- a/app/src/main/res/layout/fragment_mybehaviours.xml
+++ b/app/src/main/res/layout/fragment_mybehaviours.xml
@@ -76,6 +76,7 @@
                    app:layout_constraintTop_toBottomOf="@+id/txtAirDescriptionTitle" />
 
                <TextView
+                   android:id="@+id/tardinessDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
